# bluetooth-dualboot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  devlog.md  main.py  pyproject.toml
bluetooth_dualboot/: linux_bt.py  sync.py  utils.py  windows_bt.py
tests/: test_linux_bt.py  test_sync_matching.py  test_utils.py
