[project]
name = "bluetooth-dualboot"
version = "0.1.0"
description = "Sync Bluetooth mouse keys between Fedora Linux and Windows 11 for seamless dual-boot usage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-registry>=1.3",
]

[project.scripts]
bt-sync = "bluetooth_dualboot.sync:main"

[dependency-groups]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
